<resources>
    <string name="crop_image_menu_rotate_right">rotate</string>
    <string name="crop_image_menu_crop">save</string>
    <string name="app_name">My University</string>
    <string name="url">http://mojezeyefekr.ir/onlinelibrary/myuniversity/</string>
    <string name="img_url">http://mojezeyefekr.ir/onlinelibrary/myuniversity/imgupload/</string>
    <string name="avatar_url">http://mojezeyefekr.ir/onlinelibrary/myuniversity/avatars/</string>

    <string name="sall">all</string>
    <string name="s1">report a problem</string>
    <string name="s2">suggestion</string>
    <string name="s3">strengths points</string>
    <string-array name="subject">
        <item>@string/s1</item>
        <item>@string/s2</item>
        <item>@string/s3</item>
    </string-array>
    <string-array name="subjectall">
        <item>@string/sall</item>
        <item>@string/s1</item>
        <item>@string/s2</item>
        <item>@string/s3</item>
    </string-array>

    <string name="mall">all</string>
    <string name="m0">Administrative and Financial Deputy</string>
    <string name="m1">Research and Technology Deputy</string>
    <string name="m2">Student Deputy</string>
    <string name="m3">Educational Deputy</string>
    <string name="m4">Civil Deputy</string>
    <string-array name="catagory">
        <item>@string/m0</item>
        <item>@string/m1</item>
        <item>@string/m2</item>
        <item>@string/m3</item>
        <item>@string/m4</item>
    </string-array>
    <string-array name="catagoryall">
        <item>@string/m0all</item>
        <item>@string/m0</item>
        <item>@string/m1</item>
        <item>@string/m2</item>
        <item>@string/m3</item>
        <item>@string/m4</item>
    </string-array>

    <string name="m0all">all</string>
    <string name="m00">Student Welfare Fund</string>
    <string name="m01">Administrative Management</string>
    <string name="m02">Personnel Department</string>
    <string name="m03">Procurement</string>
    <string name="m04">Archives</string>
    <string name="m05">Secretariat</string>
    <string name="m06">Financial Affairs Manager</string>
    <string name="m07">Accounting Office</string>
    <string name="m08">Security Office</string>
    <string name="m09">Vehicle Affairs</string>
    <string name="m010">Services</string>
    <string-array name="catagory0">
        <item>@string/m00</item>
        <item>@string/m01</item>
        <item>@string/m02</item>
        <item>@string/m03</item>
        <item>@string/m04</item>
        <item>@string/m05</item>
        <item>@string/m06</item>
        <item>@string/m07</item>
        <item>@string/m08</item>
        <item>@string/m09</item>
        <item>@string/m010</item>
    </string-array>
    <string-array name="catagory0all">
        <item>@string/m0all</item>
        <item>@string/m00</item>
        <item>@string/m01</item>
        <item>@string/m02</item>
        <item>@string/m03</item>
        <item>@string/m04</item>
        <item>@string/m05</item>
        <item>@string/m06</item>
        <item>@string/m07</item>
        <item>@string/m08</item>
        <item>@string/m09</item>
        <item>@string/m010</item>
    </string-array>

    <string name="m1all">all</string>
    <string name="m10">مدیر پژوهش</string>
    <string name="m11">اداره اطلاعات آمار و رایانه</string>
    <string name="m12">دفتر طرح و برنامه و بودجه</string>
    <string name="m13">کتابخانه مرکزی</string>
    <string name="m14">آزمایشگاه ها</string>
    <string name="m15">کارگاه ها</string>
    <string-array name="catagory1">
        <item>@string/m10</item>
        <item>@string/m11</item>
        <item>@string/m12</item>
        <item>@string/m13</item>
        <item>@string/m14</item>
        <item>@string/m15</item>
    </string-array>
    <string-array name="catagory1all">
        <item>@string/m1all</item>
        <item>@string/m10</item>
        <item>@string/m11</item>
        <item>@string/m12</item>
        <item>@string/m13</item>
        <item>@string/m14</item>
        <item>@string/m15</item>
    </string-array>

    <string name="m2all">all</string>
    <string name="m20">مدیر امور دانشجویی</string>
    <string name="m21">خوابگاه ها</string>
    <string name="m22">دفتر راهنمایی و مشاوره</string>
    <string name="m23">اداره تربیت بدنی</string>
    <string name="m24">اداره فارغ التحصیلان</string>
    <string name="m25">بوفه و رستوران</string>
    <string-array name="catagory2">
        <item>@string/m20</item>
        <item>@string/m21</item>
        <item>@string/m22</item>
        <item>@string/m23</item>
        <item>@string/m24</item>
        <item>@string/m25</item>
    </string-array>
    <string-array name="catagory2all">
        <item>@string/m2all</item>
        <item>@string/m20</item>
        <item>@string/m21</item>
        <item>@string/m22</item>
        <item>@string/m23</item>
        <item>@string/m24</item>
        <item>@string/m25</item>
    </string-array>

    <string name="m3all">all</string>
    <string name="m30">مدیر امور آموزش</string>
    <string name="m31">برنامه ریزی آموزشی</string>
    <string name="m32">اداره امتحانات و ثبت نمرات</string>
    <string name="m33">بایگانی آموزشی</string>
    <string name="m34">اداره کارگزینی هیات علمی</string>
    <string-array name="catagory3">
        <item>@string/m30</item>
        <item>@string/m31</item>
        <item>@string/m32</item>
        <item>@string/m33</item>
        <item>@string/m34</item>
    </string-array>
    <string-array name="catagory3all">
        <item>@string/m3all</item>
        <item>@string/m30</item>
        <item>@string/m31</item>
        <item>@string/m32</item>
        <item>@string/m33</item>
        <item>@string/m34</item>
    </string-array>

    <string name="m4all">all</string>
    <string name="m40">اداره طراحی و اجرا</string>
    <string name="m41">اداره نگهداری و تعمیرات</string>
    <string-array name="catagory4">
        <item>@string/m40</item>
        <item>@string/m41</item>
    </string-array>
    <string-array name="catagory4all">
        <item>@string/m4all</item>
        <item>@string/m40</item>
        <item>@string/m41</item>
    </string-array>

</resources>
