<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.shehabic.droppy_samples.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drop20"
            android:title="@string/m20"
            />
        </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drop21"
            android:title="@string/m21"
            />
        </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drop22"
            android:title="@string/m22"
            />
        </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drop23"
            android:title="@string/m23"
            />
        </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drop24"
            android:title="@string/m24"
            />
        </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drop25"
            android:title="@string/m25"
            />
    </group>
</menu>