<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.shehabic.droppy_samples.MainActivity">
    <group android:id="@+id/select2_1"
           android:checkableBehavior="single">
        <item
            android:id="@+id/drop1"
            android:title="@string/m0"
            />
    </group>
    <group android:id="@+id/select2_2"
           android:checkableBehavior="single">
        <item
            android:id="@+id/drop2"
            android:title="@string/m1"
            />
    </group>
    <group android:id="@+id/select2_3"
           android:checkableBehavior="single">
        <item
            android:id="@+id/drop3"
            android:title="@string/m2"
            />
    </group>
    <group android:id="@+id/select2_4"
           android:checkableBehavior="single">
        <item
            android:id="@+id/drop4"
            android:title="@string/m3"
            />
    </group>
    <group android:id="@+id/select2_5"
           android:checkableBehavior="single">
        <item
            android:id="@+id/drop5"
            android:title="@string/m4"
            />
    </group>


</menu>